--- a/villagepillagejames.css
+++ b/villagepillagejames.css
@@ -1,1 +1,8 @@
-
+.bank {
+  width: 200px;
+  aspect-ratio: 482/719;
+  border-radius: 4px;
+  background-image: url("img/baseCards.jpg");
+  background-size: 700% 400%;
+  background-position: -600% -200%;
+}
