--- a/src/villagepillage.scss
+++ b/src/villagepillage.scss
@@ -8,3 +8,15 @@
     // TODO allow 2 players
     background-position: -600% -200%;
 }
+
+.player_contents {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+}
+
+.player_area {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
