--- a/src/villagepillage.scss
+++ b/src/villagepillage.scss
@@ -1,4 +1,5 @@
 @use 'sass:list';
+@use 'sass:math';
 
 .bank {
     width: 200px;
@@ -32,8 +33,6 @@
 
     background-image: url('img/turnip.png');
     background-size: 100% 100%;
-
-    opacity: 0;
 }
 
 $left_pos: (128px, 82px, 130px, 82px, 128px);
@@ -56,8 +55,6 @@ $left_pos: (128px, 82px, 130px, 82px, 128px);
     transform: scaleX(-1);
 
     left: 12px;
-
-    opacity: 0;
 }
 
 @for $i from 0 through 2 {
@@ -70,4 +67,14 @@ $left_pos: (128px, 82px, 130px, 82px, 128px);
 
 .hand-stock .game-card:hover {
     z-index: 1;
+}
+
+.stockpile {
+    width: 200px;
+    aspect-ratio: 482 / 719;
+    position: relative;
+}
+
+.hidden {
+    opacity: 0;
 }
