--- a/villagepillagejames.css
+++ b/villagepillagejames.css
@@ -12,12 +12,20 @@
   display: flex;
   flex-direction: row;
   gap: 10px;
+  justify-content: center;
 }
 
 .player_area {
   display: flex;
   flex-direction: column;
   gap: 10px;
+  align-items: center;
+}
+
+.player_area_name {
+  width: 400px;
+  display: flex;
+  justify-content: center;
 }
 
 .turnip {
@@ -82,6 +90,14 @@
   z-index: 1;
 }
 
+.hand-stock.floating {
+  bottom: calc(var(--bga-cards_hand-stock-floating-height) - var(--bga-cards_hand-stock-height) - 200px) !important;
+  transition: all 0.8s ease;
+}
+.hand-stock.floating:hover {
+  bottom: calc(var(--bga-cards_hand-stock-floating-height) - var(--bga-cards_hand-stock-height)) !important;
+}
+
 .stockpile {
   width: 200px;
   aspect-ratio: 482/719;
@@ -90,4 +106,24 @@
 
 .hidden {
   opacity: 0;
+}
+
+.selected, .selectable {
+  outline-width: 3px;
+  outline-style: solid;
+  cursor: pointer;
+}
+
+.selected {
+  outline-color: red;
+}
+.selected.game-card-front {
+  transform: translateY(calc(var(--bga-cards_card-height) / -5));
+}
+
+.selectable {
+  outline-color: black;
+}
+.selectable:hover {
+  outline-color: red;
 }
