--- a/villagepillagejames.css
+++ b/villagepillagejames.css
@@ -38,6 +38,7 @@
   width: 400px;
   display: flex;
   justify-content: center;
+  position: relative;
 }
 
 .turnip {
@@ -154,4 +155,11 @@
 }
 .selectable:hover {
   outline-color: red;
+}
+
+.exhausted {
+  transform: rotate(90deg);
+  top: calc(100% + 10px);
+  z-index: -1;
+  width: 200px !important;
 }
