Mobile layout update for hand

--- a/src/villagepillage.scss
+++ b/src/villagepillage.scss
@@ -91,7 +91,9 @@ $left_pos: (128px, 82px, 130px, 82px, 128px);
 }
 
 .hand-stock.floating {
-    bottom: calc(var(--bga-cards_hand-stock-floating-height) - var(--bga-cards_hand-stock-height) - 200px) !important;
+    @media screen and (min-width: 840px) {
+        bottom: calc(var(--bga-cards_hand-stock-floating-height) - var(--bga-cards_hand-stock-height) - 200px) !important;        
+    }
     transition: all 0.8s ease;
 
     &:hover {
